--- a/study1.ipynb
+++ b/study1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env': venv)",
+   "display_name": "Python 3.8.9 ('env')",
    "language": "python",
    "name": "python3"
   },
@@ -58,12 +58,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ee7fecd0a23739fbccbdb877d90f534ced37a9d127061ca09afd586484917ebc"
+    "hash": "d6d614dd0bf32e54e6f7d1c9fa4ec85bf3b26c4d3876923b9268e537425de231"
    }
   }
  },
